--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.7.0",
-    "eslint-config-next": "14.2.5"
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
